manifests/application/user-info-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-info
  namespace: dojo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-info
  template:
    metadata:
      labels:
        app: user-info
    spec:
      serviceAccountName: flask-webserver-service-account
      containers:
      - name: user-info
        # we're using a locally running container registry, so that's why "localhost:5001"
        # see: start_registry.sh
        image: localhost:5001/user-info:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: MEMORY_LIMIT
            cpu: CPU_LIMIT
        ports:
        - containerPort: 8010
