manifests/application/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webserver
  namespace: dojo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-webserver
  template:
    metadata:
      labels:
        app: flask-webserver
    spec:
      serviceAccountName: SERVICE_ACCOUNT_NAME
      containers:
      - name: flask-webserver
        # we're using a locally running container registry, so that's why "localhost:5001"
        # see: start_registry.sh
        image: localhost:5001/flask-webserver:latest
        ports:
        - containerPort: 8000
