manifests/application/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dojo
spec:
  clusterIP: None
  selector:
    app: postgres
