manifests/application/logs-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-processor
  namespace: dojo
spec:
  selector:
    app: logs-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8005
  type: ClusterIP
