manifests/application/user-info-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-info
  namespace: dojo
spec:
  selector:
    app: user-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: TARGET_PORT
  type: ClusterIP
