manifests/application/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-webserver
  namespace: dojo
spec:
  selector:
    app: flask-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
