manifests/application/network-policy-logs-processor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webserver-to-logs-processor
  namespace: dojo
spec:
  podSelector:
    matchLabels:
      app: logs-processor
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: INGRESS_FROM_POD
